dev1 - feature button

--- a/github-basic-html-template.html
+++ b/github-basic-html-template.html
@@ -45,8 +45,9 @@
   <h4 class="py-1">dev1 coding 1</h4>
   <h4 class="py-1">dev2 coding 1</h4>
   <h4 class="py-1">dev2 - ovo je linija koja ce izazvati konflikt</h4>
-
   <h4 class="py-1">dev1 coding 2</h4>
+
+  <button onclick="OpenLink()" class="btn btn-outline-primary">Otvori link</button>
   
 
 
@@ -55,6 +56,17 @@
 <footer>
   &copy; 2025 GitHub Basics - All rights reserved
 </footer>
+
+<script>
+
+function OpenLink(){
+  window.location.href="https://github.com/vedad-keskin/BEST-github-basics";
+}
+
+
+</script>
+
+
 
 <!-- Bootstrap skripte -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
